test/Fail/LevelUnivFunSorts.agda
{-# OPTIONS --level-universe #-}

open import Common.Level
open import Agda.Primitive

_ = Set -> Level
